fix: sidebar getting squized on mobile when closed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,7 +74,19 @@ a {
     @apply text-link font-content text-sm font-bold underline-offset-4 hover:underline;
 }
 
+/* Utility to disable selection. */
+@utility no-select {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
 /* Change Autocomplete styles in Chrome*/
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
